# api/api.go
@@ -4,9 +4,8 @@ import (
 	"github.com/casbin/casbin/v2"
 	"github.com/gin-gonic/gin"
 
-	"api-gateway/api/middleware"
-
 	"api-gateway/api/handler"
+	"api-gateway/api/middleware"
 	_ "api-gateway/docs"
 
 	files "github.com/swaggo/files"
@@ -23,24 +22,22 @@ import (
 // @name Authorization
 
 func NewGin(h *handler.Handler) *gin.Engine {
-	r := gin.Default()
-
-	// Middleware setup if needed
 	ca, err := casbin.NewEnforcer("config/model.conf", "config/policy.csv")
 	if err != nil {
 		panic(err)
 	}
-
+	
 	err = ca.LoadPolicy()
 	if err != nil {
 		panic(err)
 	}
+	r := gin.Default()
+	r.Use(middleware.NewAuth(ca))
+
 	router := r.Group("/")
-	router.Use(middleware.NewAuth(ca))
 	url := ginSwagger.URL("swagger/doc.json")
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(files.Handler, url))
 
-	// Game endpoints
 	a := router.Group("/account")
 	{
 		a.POST("/create", h.CreateAccount)
@@ -57,7 +54,7 @@ func NewGin(h *handler.Handler) *gin.Engine {
 		b.PUT("/update", h.UpdateBudget)
 		b.DELETE("/delete/:id", h.DeleteBudget)
 	}
-    c := router.Group("/category")
+	c := router.Group("/category")
 	{
 		c.POST("/create", h.CreateCategory)
 		c.GET("/list", h.ListCategories)
@@ -65,7 +62,7 @@ func NewGin(h *handler.Handler) *gin.Engine {
 		c.PUT("/update", h.UpdateCategory)
 		c.DELETE("/delete/:id", h.DeleteCategory)
 	}
-    g := router.Group("/goal")
+	g := router.Group("/goal")
 	{
 		g.POST("/create", h.CreateGoal)
 		g.GET("/list", h.ListGoals)
@@ -74,13 +71,20 @@ func NewGin(h *handler.Handler) *gin.Engine {
 		g.DELETE("/delete/:id", h.DeleteGoal)
 	}
 
-    t := router.Group("/transaction")
+	t := router.Group("/transaction")
 	{
 		t.POST("/create", h.CreateTransaction)
 		t.GET("/list", h.GetTransactions)
 		t.GET("/get/:id", h.GetTransactionById)
 		t.PUT("/update", h.UpdateTransaction)
 		t.DELETE("/delete/:id", h.DeleteTransaction)
+	}
+
+	n := router.Group("/notification")
+	{
+		n.GET("/list", h.ListNotification)
+		n.GET("/get/:user_id", h.GetNotification)
+		// n.DELETE("/delete/:id", h.DeleteNotification)
 	}
 
 	return r
